postMessage raises INVALID_STATE_ERR instead of DATA_CLONE_ERR in many cases. https://bugs.webkit.org/show_bug.cgi?id=66713

Reviewed by Dmitry Titov.

Source/WebCore:

See http://www.whatwg.org/specs/web-apps/current-work/multipage/comms.html#posting-messages for postMessage

* bindings/js/JSMessagePortCustom.cpp:
(WebCore::fillMessagePortArray):
* bindings/v8/custom/V8MessagePortCustom.cpp:
(WebCore::getMessagePortArray):
* dom/MessagePort.cpp:
(WebCore::MessagePort::postMessage):
(WebCore::MessagePort::disentanglePorts):

LayoutTests:

* fast/events/message-port-clone-expected.txt: Output changed from INVALID_STATE_ERR to DATA_CLONE_ERR.
* fast/events/message-port-multi-expected.txt: Ditto.
* fast/workers/worker-context-multi-port-expected.txt:  Ditto.
* fast/workers/worker-multi-port-expected.txt:  Ditto.
* platform/chromium-win/fast/events/message-port-multi-expected.txt: Ditto.
* platform/chromium-win/fast/workers/worker-context-multi-port-expected.txt: Ditto.
* platform/chromium-win/fast/workers/worker-multi-port-expected.txt: Ditto.

Canonical link: https://commits.webkit.org/82927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93986 268f45cc-cd09-0410-ab3c-d52691b4dbfc