Source/WebCore/bindings/v8/custom/V8MessagePortCustom.cpp
@@ -90,9 +90,9 @@ bool getMessagePortArray(v8::Local<v8::Value> value, MessagePortArray& portArray
     // Validate the passed array of ports.
     for (unsigned int i = 0; i < length; ++i) {
         v8::Local<v8::Value> port = ports->Get(i);
-        // Validation of non-null objects, per HTML5 spec 8.3.3.
+        // Validation of non-null objects, per HTML5 spec 10.3.3.
         if (isUndefinedOrNull(port)) {
-            throwError(INVALID_STATE_ERR);
+            throwError(DATA_CLONE_ERR);
             return false;
         }
         // Validation of Objects implementing an interface, per WebIDL spec 4.1.15.
